--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 body{
     width: 100%;
     height: 100%;
-    background-color:blue
+    background-color:blue;
+    font-size: 50px;
+    color: red;
 }
